--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/bottom-tabs": "^5.11.11",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
+    "axios": "^0.24.0",
     "react": "17.0.2",
     "react-native": "0.66.4",
     "react-native-gesture-handler": "^1.10.3",
