--- a/ios/Podfile
+++ b/ios/Podfile
@@ -20,6 +20,8 @@ target 'where' do
     :hermes_enabled => false
   )
 
+  pod 'RNSVG', :path => '../node_modules/react-native-svg'
+
   target 'whereTests' do
     inherit! :complete
     # Pods for testing
