--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "axios": "^0.24.0",
     "react": "17.0.2",
     "react-native": "0.66.4",
+    "react-native-chart-kit": "^6.11.0",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-maps": "0.27.1",
     "react-native-reanimated": "^2.3.0",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.3.0",
+    "react-native-svg": "^12.1.1",
     "rn-sliding-up-panel": "^2.4.5"
   },
   "devDependencies": {
